# 2022cpl_Homework

./: CMakeLists.txt  Readme.md  test.c
10-struct_11-linkedlist/: CMakeLists.txt  fifa.c  file_management.c  polynomial.c  string-hash.c
1_types_io/: CMakeLists.txt  ascii.c  equation.c  gravity.c  julian.c  money-change.c  pi.c  reverse.c  time.c
2_if_for_array/: CMakeLists.txt  collatz.c  factorial.c  inverse2.c  obstacle.c  series.c  singal.c
3_for_a_while/: 0-1bit.c  CMakeLists.txt  decimal.c  demical.c  josephus.c  palindrome.c  quick-sort.c  statistics.c
4_loops/: CMakeLists.txt  life.c  matrix-mult.c  mines.c  suduku.c  trace.c
5_function/: CMakeLists.txt  absolute_prime.c  magic_square.c  next_permutation.c  radix.c  sum.c
6-recursion/: integration.c  max.c  pascal.c  poi.c  tiles.c  triangle.c
7-data-types/: brackets.c  buddy.c  cuboid.c  pour.c  rotate.c  stack.c  wine.c
8-pointer/: interpreter.c  substr.c  title.c
9-more-pointers/: CMakeLists.txt  parse.c  strcat.c  tokenizer.c
jj/: 6.18-20.c  CMakeLists.txt  state_map.c
sort/: CMakeLists.txt  bubble.c  insert.c  merge.c  selection.c
